# Parallel-Iterator

./: CMakeLists.txt
cmake/Modules/: FindmyParallelIterator.cmake
lib/: CMakeLists.txt  myParallelFor.cpp  myParallelFor.hpp  myParallelIterator.hpp  myWorkset.hpp
